unpackaged/main/default/objects/Supplier__c/fields/OnboardingCall__c.field-meta.xml
<CustomField>
    <fullName>OnboardingCall__c</fullName>
    <description>Updated through a Zap that also updated the hubspot email flow</description>
    <label>Onboarding Call</label>
    <type>DateTime</type>
</CustomField>