unpackaged/main/default/objects/Supplier__c/fields/OnboardingCallCompleted__c.field-meta.xml
<CustomField>
    <fullName>OnboardingCallCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Onboarding Call Completed</label>
    <type>Checkbox</type>
</CustomField>