unpackaged/main/default/objects/Supplier__c/fields/OnboardingParentCase__c.field-meta.xml
<CustomField>
    <fullName>OnboardingParentCase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Supplier Onboarding parent case</description>
    <label>Onboarding Parent Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Suppliers</relationshipLabel>
    <relationshipName>Suppliers</relationshipName>
    <type>Lookup</type>
</CustomField>