unpackaged/main/default/objects/Supplier__c/fields/OnboardingZendeskTicket__c.field-meta.xml
<CustomField>
    <fullName>OnboardingZendeskTicket__c</fullName>
    <label>Onboarding Zendesk Ticket</label>
    <type>Url</type>
</CustomField>