unpackaged/main/default/objects/Supplier__c/fields/OpenActionItems__c.field-meta.xml
<CustomField>
    <fullName>OpenActionItems__c</fullName>
    <label>Open Action Items</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>