unpackaged/main/default/objects/Supplier__c/fields/OpenJobRevenue__c.field-meta.xml
<CustomField>
    <fullName>OpenJobRevenue__c</fullName>
    <label>Open Job Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>