unpackaged/main/default/objects/Supplier__c/fields/OpenMissionControlCases__c.field-meta.xml
<CustomField>
    <fullName>OpenMissionControlCases__c</fullName>
    <label>Open Mission Control Cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>