unpackaged/main/default/objects/Supplier__c/fields/OverallRating__c.field-meta.xml
<CustomField>
    <fullName>OverallRating__c</fullName>
    <label>Overall Rating</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>