unpackaged/main/default/objects/Supplier__c/fields/OverrideJobs__c.field-meta.xml
<CustomField>
    <fullName>OverrideJobs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Manual Flag for Overriding Jobs</description>
    <label>Override Jobs?</label>
    <type>Checkbox</type>
</CustomField>