unpackaged/main/default/objects/Supplier__c/fields/OverrideRevenue__c.field-meta.xml
<CustomField>
    <fullName>OverrideRevenue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Manual Flag for Overriding Value</description>
    <label>Override Revenue?</label>
    <type>Checkbox</type>
</CustomField>