unpackaged/main/default/objects/Supplier__c/fields/P21_Account_Details__c.field-meta.xml
<CustomField>
    <fullName>P21_Account_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>P21 Account Details</label>
    <referenceTo>P21_Account_Details__c</referenceTo>
    <relationshipLabel>Suppliers</relationshipLabel>
    <relationshipName>Suppliers</relationshipName>
    <type>Lookup</type>
</CustomField>