unpackaged/main/default/objects/Supplier__c/fields/P21_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>P21_Account_Owner__c</fullName>
    <formula>P21_Account_Details__r.Owner:User.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>P21 Account Owner</label>
    <type>Text</type>
</CustomField>