unpackaged/main/default/objects/Supplier__c/fields/PackingListFileName__c.field-meta.xml
<CustomField>
    <fullName>PackingListFileName__c</fullName>
    <label>Packing List File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>