unpackaged/main/default/objects/Supplier__c/fields/PartnerID__c.field-meta.xml
<CustomField>
    <fullName>PartnerID__c</fullName>
    <externalId>true</externalId>
    <label>Partner ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>