unpackaged/main/default/objects/Supplier__c/fields/PDUTestNo__c.field-meta.xml
<CustomField>
    <fullName>PDUTestNo__c</fullName>
    <description>What is this?</description>
    <label>PDU Test No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>