unpackaged/main/default/objects/Supplier__c/fields/PDUTestYes__c.field-meta.xml
<CustomField>
    <fullName>PDUTestYes__c</fullName>
    <description>No idea what this field does</description>
    <label>PDU Test Yes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>