unpackaged/main/default/objects/Supplier__c/fields/PIPExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>PIPExpirationDate__c</fullName>
    <label>PIP Expiration Date</label>
    <type>Date</type>
</CustomField>