unpackaged/main/default/objects/Supplier__c/fields/PlasmaCutterCount__c.field-meta.xml
<CustomField>
    <fullName>PlasmaCutterCount__c</fullName>
    <label>Plasma Cutter Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>