unpackaged/main/default/objects/Supplier__c/fields/PolyJetApproved__c.field-meta.xml
<CustomField>
    <fullName>PolyJetApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PolyJet Approved?</label>
    <type>Checkbox</type>
</CustomField>