unpackaged/main/default/objects/Supplier__c/fields/PolyJetCount__c.field-meta.xml
<CustomField>
    <fullName>PolyJetCount__c</fullName>
    <label>PolyJet Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>