unpackaged/main/default/objects/Supplier__c/fields/PremiumGroup__c.field-meta.xml
<CustomField>
    <fullName>PremiumGroup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Premium Group?</label>
    <type>Checkbox</type>
</CustomField>