unpackaged/main/default/objects/Supplier__c/fields/PremiumPromotionDate__c.field-meta.xml
<CustomField>
    <fullName>PremiumPromotionDate__c</fullName>
    <label>Premium Promotion Date</label>
    <type>Date</type>
</CustomField>