unpackaged/main/default/objects/Supplier__c/fields/PremiumPromotionStatus__c.field-meta.xml
<CustomField>
    <fullName>PremiumPromotionStatus__c</fullName>
    <label>Premium Promotion Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>