unpackaged/main/default/objects/Supplier__c/fields/Primary_RFQ_Technology__c.field-meta.xml
<CustomField>
    <fullName>Primary_RFQ_Technology__c</fullName>
    <label>Primary RFQ Technology</label>
    <length>255</length>
    <type>Text</type>
</CustomField>