unpackaged/main/default/objects/Supplier__c/fields/PromotedToPremiumInERP__c.field-meta.xml
<CustomField>
    <fullName>PromotedToPremiumInERP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Promoted to Premium in ERP?</label>
    <type>Checkbox</type>
</CustomField>