unpackaged/main/default/objects/Supplier__c/fields/QMSCertified__c.field-meta.xml
<CustomField>
    <fullName>QMSCertified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QMS Certified?</label>
    <type>Checkbox</type>
</CustomField>