unpackaged/main/default/objects/Supplier__c/fields/QMSDocument__c.field-meta.xml
<CustomField>
    <fullName>QMSDocument__c</fullName>
    <label>QMS Document</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>