unpackaged/main/default/objects/Supplier__c/fields/QMSDocumentExists__c.field-meta.xml
<CustomField>
    <fullName>QMSDocumentExists__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QMS Document Exists?</label>
    <type>Checkbox</type>
</CustomField>