unpackaged/main/default/objects/Supplier__c/fields/QMSTimeStamp__c.field-meta.xml
<CustomField>
    <fullName>QMSTimeStamp__c</fullName>
    <label>QMS Time Stamp</label>
    <type>DateTime</type>
</CustomField>