unpackaged/main/default/objects/Supplier__c/fields/QualityRating__c.field-meta.xml
<CustomField>
    <fullName>QualityRating__c</fullName>
    <label>Quality Rating</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>