unpackaged/main/default/objects/Supplier__c/fields/RamEDMCount__c.field-meta.xml
<CustomField>
    <fullName>RamEDMCount__c</fullName>
    <label>Ram EDM Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>