unpackaged/main/default/objects/Supplier__c/fields/ReasonForOptOut__c.field-meta.xml
<CustomField>
    <fullName>ReasonForOptOut__c</fullName>
    <label>Reason for Opt Out</label>
    <length>255</length>
    <type>Text</type>
</CustomField>