unpackaged/main/default/objects/Supplier__c/fields/ReceiveTestByDate__c.field-meta.xml
<CustomField>
    <fullName>ReceiveTestByDate__c</fullName>
    <description>This field is used to trigger a follow up case when test is not received by this date</description>
    <label>Receive Test By Date</label>
    <type>DateTime</type>
</CustomField>