unpackaged/main/default/objects/Supplier__c/fields/RemediationPlan__c.field-meta.xml
<CustomField>
    <fullName>RemediationPlan__c</fullName>
    <label>Remediation Plan</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>