unpackaged/main/default/objects/Supplier__c/fields/ReturnTrackingNumber__c.field-meta.xml
<CustomField>
    <fullName>ReturnTrackingNumber__c</fullName>
    <description>Tracking number fore the return of the test part</description>
    <label>Return Tracking Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>