unpackaged/main/default/objects/Supplier__c/fields/ReviewedPartnerGuide__c.field-meta.xml
<CustomField>
    <fullName>ReviewedPartnerGuide__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Reviewed partner guide on test request</description>
    <label>Reviewed Partner Guide</label>
    <type>Checkbox</type>
</CustomField>