unpackaged/main/default/objects/Supplier__c/fields/RFQEmail__c.field-meta.xml
<CustomField>
    <fullName>RFQEmail__c</fullName>
    <label>RFQ Email</label>
    <type>Email</type>
</CustomField>