unpackaged/main/default/objects/Supplier__c/fields/RFQOnly__c.field-meta.xml
<CustomField>
    <fullName>RFQOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RFQ Only?</label>
    <type>Checkbox</type>
</CustomField>