unpackaged/main/default/objects/Supplier__c/fields/RFQPartner__c.field-meta.xml
<CustomField>
    <fullName>RFQPartner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RFQ Partner?</label>
    <type>Checkbox</type>
</CustomField>