unpackaged/main/default/objects/Supplier__c/fields/SecondaryRFQTechnology__c.field-meta.xml
<CustomField>
    <fullName>SecondaryRFQTechnology__c</fullName>
    <label>Secondary RFQ Technology</label>
    <length>255</length>
    <type>Text</type>
</CustomField>