unpackaged/main/default/objects/Supplier__c/fields/SheetMetalApproved__c.field-meta.xml
<CustomField>
    <fullName>SheetMetalApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sheet Metal Approved?</label>
    <type>Checkbox</type>
</CustomField>