unpackaged/main/default/objects/Supplier__c/fields/SheetMetalBrakeCount__c.field-meta.xml
<CustomField>
    <fullName>SheetMetalBrakeCount__c</fullName>
    <label>Sheet Metal Brake Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>