unpackaged/main/default/objects/Supplier__c/fields/SheetMetalCapable__c.field-meta.xml
<CustomField>
    <fullName>SheetMetalCapable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sheet Metal Capable?</label>
    <type>Checkbox</type>
</CustomField>