unpackaged/main/default/objects/Supplier__c/fields/SheetMetalCount__c.field-meta.xml
<CustomField>
    <fullName>SheetMetalCount__c</fullName>
    <label>Sheet Metal Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>