unpackaged/main/default/objects/Supplier__c/fields/SheetMetalProcessType__c.field-meta.xml
<CustomField>
    <fullName>SheetMetalProcessType__c</fullName>
    <label>Sheet Metal Process Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>