unpackaged/main/default/objects/Supplier__c/fields/SheetMetalPunchCount__c.field-meta.xml
<CustomField>
    <fullName>SheetMetalPunchCount__c</fullName>
    <label>Sheet Metal Punch Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>