unpackaged/main/default/objects/Supplier__c/fields/SheetMetalShearCount__c.field-meta.xml
<CustomField>
    <fullName>SheetMetalShearCount__c</fullName>
    <label>Sheet Metal Shear Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>