unpackaged/main/default/objects/Supplier__c/fields/ShopCategory__c.field-meta.xml
<CustomField>
    <fullName>ShopCategory__c</fullName>
    <label>Shop Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>