unpackaged/main/default/objects/Supplier__c/fields/SignUp__c.field-meta.xml
<CustomField>
    <fullName>SignUp__c</fullName>
    <label>Sign Up</label>
    <length>255</length>
    <type>Text</type>
</CustomField>