unpackaged/main/default/objects/Supplier__c/fields/SLAApproved__c.field-meta.xml
<CustomField>
    <fullName>SLAApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SLA Approved?</label>
    <type>Checkbox</type>
</CustomField>