unpackaged/main/default/objects/Supplier__c/fields/SLACount__c.field-meta.xml
<CustomField>
    <fullName>SLACount__c</fullName>
    <label>SLA Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>