unpackaged/main/default/objects/Supplier__c/fields/SLSApproved__c.field-meta.xml
<CustomField>
    <fullName>SLSApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SLS Approved?</label>
    <type>Checkbox</type>
</CustomField>