unpackaged/main/default/objects/Supplier__c/fields/SLSCount__c.field-meta.xml
<CustomField>
    <fullName>SLSCount__c</fullName>
    <label>SLS Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>