unpackaged/main/default/objects/Supplier__c/fields/SPOC_Supplier__c.field-meta.xml
<CustomField>
    <fullName>SPOC_Supplier__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SPOC Supplier</label>
    <type>Checkbox</type>
</CustomField>