unpackaged/main/default/objects/Supplier__c/fields/SponsoredForPremiumPromotionBy__c.field-meta.xml
<CustomField>
    <fullName>SponsoredForPremiumPromotionBy__c</fullName>
    <label>Sponsored for Premium Promotion By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>