unpackaged/main/default/objects/Supplier__c/fields/StaffVerifiedCertificates__c.field-meta.xml
<CustomField>
    <fullName>StaffVerifiedCertificates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Staff Verified Certifications</label>
    <type>Checkbox</type>
</CustomField>