unpackaged/main/default/objects/Supplier__c/fields/StampingApproved__c.field-meta.xml
<CustomField>
    <fullName>StampingApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stamping Approved?</label>
    <type>Checkbox</type>
</CustomField>