unpackaged/main/default/objects/Supplier__c/fields/StampingCount__c.field-meta.xml
<CustomField>
    <fullName>StampingCount__c</fullName>
    <label>Stamping Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>