unpackaged/main/default/objects/Supplier__c/fields/Sup_Owner_RouteTime__c.field-meta.xml
<CustomField>
    <fullName>Sup_Owner_RouteTime__c</fullName>
    <label>Sup Owner RouteTime</label>
    <type>DateTime</type>
</CustomField>