unpackaged/main/default/objects/Supplier__c/fields/Sup_Owner_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Sup_Owner_Stamp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sup Owner Stamp</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Suppliers</relationshipName>
    <type>Lookup</type>
</CustomField>