unpackaged/main/default/objects/Supplier__c/fields/Sup_TotalPotentialRevenue__c.field-meta.xml
<CustomField>
    <fullName>Sup_TotalPotentialRevenue__c</fullName>
    <label>Supplies Total Potential Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>