unpackaged/main/default/objects/Supplier__c/fields/Sup_TotalQuotedRevenue__c.field-meta.xml
<CustomField>
    <fullName>Sup_TotalQuotedRevenue__c</fullName>
    <label>Supplies Total Quoted Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>