unpackaged/main/default/objects/Supplier__c/fields/Sup_TotalRevenueTY__c.field-meta.xml
<CustomField>
    <fullName>Sup_TotalRevenueTY__c</fullName>
    <label>Supplies Total Revenue This Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>