unpackaged/main/default/objects/Supplier__c/fields/SupplierCompanyName__c.field-meta.xml
<CustomField>
    <fullName>SupplierCompanyName__c</fullName>
    <label>Supplier Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>