unpackaged/main/default/objects/Supplier__c/fields/SupplierStatus__c.field-meta.xml
<CustomField>
    <fullName>SupplierStatus__c</fullName>
    <label>Supplier Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>approved</fullName>
            </value>
            <value>
                <fullName>expelled</fullName>
            </value>
            <value>
                <fullName>frozen</fullName>
            </value>
            <value>
                <fullName>opted_out</fullName>
            </value>
            <value>
                <fullName>pip</fullName>
            </value>
            <value>
                <fullName>registered</fullName>
            </value>
            <value>
                <fullName>supplier_only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>