unpackaged/main/default/objects/Supplier__c/fields/SupplierStatusLastUpdated__c.field-meta.xml
<CustomField>
    <fullName>SupplierStatusLastUpdated__c</fullName>
    <label>Supplier Status Last Updated</label>
    <type>Date</type>
</CustomField>