unpackaged/main/default/objects/Supplier__c/fields/SwissLatheCount__c.field-meta.xml
<CustomField>
    <fullName>SwissLatheCount__c</fullName>
    <label>Swiss Lathe Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>