unpackaged/main/default/objects/Supplier__c/fields/TakenWork__c.field-meta.xml
<CustomField>
    <fullName>TakenWork__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Taken Work?</label>
    <type>Checkbox</type>
</CustomField>