unpackaged/main/default/objects/Supplier__c/fields/TermsAndConditionsAcceptedDatetime__c.field-meta.xml
<CustomField>
    <fullName>TermsAndConditionsAcceptedDatetime__c</fullName>
    <label>Terms And Conditions Accepted Datetime</label>
    <type>DateTime</type>
</CustomField>