unpackaged/main/default/objects/Supplier__c/fields/TestEmailFlow__c.field-meta.xml
<CustomField>
    <fullName>TestEmailFlow__c</fullName>
    <description>Indicates which email flow and triggers workato recipe.</description>
    <label>Test Email Flow</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EZ-Passed</fullName>
            </value>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Failed Once</fullName>
            </value>
            <value>
                <fullName>Failed Twice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>