unpackaged/main/default/objects/Supplier__c/fields/TestMaterial2x2x3__c.field-meta.xml
<CustomField>
    <fullName>TestMaterial2x2x3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test Material 2x2x3</label>
    <type>Checkbox</type>
</CustomField>