unpackaged/main/default/objects/Supplier__c/fields/TestMaterial6x1175__c.field-meta.xml
<CustomField>
    <fullName>TestMaterial6x1175__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test Material 6x11.75</label>
    <type>Checkbox</type>
</CustomField>