unpackaged/main/default/objects/Supplier__c/fields/TestMaterial6x8__c.field-meta.xml
<CustomField>
    <fullName>TestMaterial6x8__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test Material 6x8</label>
    <type>Checkbox</type>
</CustomField>