unpackaged/main/default/objects/Supplier__c/fields/TestMaterialRoundBar1_2x24__c.field-meta.xml
<CustomField>
    <fullName>TestMaterialRoundBar1_2x24__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test Material Round Bar 1/2 x 24</label>
    <type>Checkbox</type>
</CustomField>