unpackaged/main/default/objects/Supplier__c/fields/TestMaterialRoundBar__c.field-meta.xml
<CustomField>
    <fullName>TestMaterialRoundBar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test Material Round Bar</label>
    <type>Checkbox</type>
</CustomField>