unpackaged/main/default/objects/Supplier__c/fields/TestPartCity__c.field-meta.xml
<CustomField>
    <fullName>TestPartCity__c</fullName>
    <label>Test Part City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>