unpackaged/main/default/objects/Supplier__c/fields/TestPartManualPrice__c.field-meta.xml
<CustomField>
    <fullName>TestPartManualPrice__c</fullName>
    <label>Test Part Manual Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>