unpackaged/main/default/objects/Supplier__c/fields/TestPartMaterial__c.field-meta.xml
<CustomField>
    <fullName>TestPartMaterial__c</fullName>
    <description>The material chosen for Supplier Onboarding Test Part</description>
    <label>Test Part Material</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1x2x3</fullName>
            </value>
            <value>
                <fullName>2x2x3</fullName>
            </value>
            <value>
                <fullName>6x11.75</fullName>
            </value>
            <value>
                <fullName>6x8</fullName>
            </value>
            <value>
                <fullName>Round Bar</fullName>
            </value>
            <value>
                <fullName>Round Bar 1/2 x 24</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>