unpackaged/main/default/objects/Supplier__c/fields/TestPartPaid__c.field-meta.xml
<CustomField>
    <fullName>TestPartPaid__c</fullName>
    <label>Test Part Paid</label>
    <type>Date</type>
</CustomField>