unpackaged/main/default/objects/Supplier__c/fields/TestPartPayable__c.field-meta.xml
<CustomField>
    <fullName>TestPartPayable__c</fullName>
    <formula>IF (  NOT(ISPICKVAL(TestPartStatus__c, 'Passed')), '',
  IF ( ISPICKVAL(TestPartStatus__c, 'Passed') &amp;&amp; NOT(ISNULL( TestPartPaid__c )) , 'Paid',  
    IF ( ISPICKVAL(TestPartStatus__c, 'Passed') &amp;&amp; CompletedJobs__c &gt;= 1, 'Payable', 'Needs to complete at least 1 job')
  )
)</formula>
    <label>Test Part Payable</label>
    <type>Text</type>
</CustomField>