unpackaged/main/default/objects/Supplier__c/fields/TestPartPrice__c.field-meta.xml
<CustomField>
    <fullName>TestPartPrice__c</fullName>
    <formula>IF(
    ISPICKVAL(TestPartStatus__c, 'Passed') &amp;&amp; (
        TestProcessCNCLathe__c ||
        TestProcessCNCMill__c ||
        ISPICKVAL(TestPartProcess__c, 'CNC - Mill') ||
        ISPICKVAL(TestPartProcess__c, 'CNC - Lathe') ||
        ISPICKVAL(TestPartProcess__c, 'Swiss Lathe')
    ),
    500,
    IF(
        ISPICKVAL(TestPartStatus__c, 'Passed') &amp;&amp; (
            TestProcessSheetMetalBent__c ||
            ISPICKVAL(TestPartProcess__c, 'Sheet Metal - Bent')
        ),
        200,
        IF(
            ISPICKVAL(TestPartStatus__c, 'Passed') &amp;&amp; (
                TestProcessSheetMetalFlat__c ||
                ISPICKVAL(TestPartProcess__c, 'Sheet Metal') ||
                ISPICKVAL(TestPartProcess__c, 'Sheet Metal - Cutting')
            ),
            100,
            TestPartManualPrice__c
        )
    )
)</formula>
    <label>Test Part Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>