unpackaged/main/default/objects/Supplier__c/fields/TestPartProcess__c.field-meta.xml
<CustomField>
    <fullName>TestPartProcess__c</fullName>
    <description>The process chosen for Supplier Onboarding Test Part process</description>
    <label>Test Part Process</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CNC - Lathe</fullName>
            </value>
            <value>
                <fullName>CNC - Mill</fullName>
            </value>
            <value>
                <fullName>Die Casting</fullName>
            </value>
            <value>
                <fullName>Extrusion</fullName>
            </value>
            <value>
                <fullName>Sheet Metal</fullName>
            </value>
            <value>
                <fullName>Sheet Metal - Cutting</fullName>
            </value>
            <value>
                <fullName>Stamping</fullName>
            </value>
            <value>
                <fullName>Tube Bending</fullName>
            </value>
            <value>
                <fullName>Tube Cutting</fullName>
            </value>
            <value>
                <fullName>Swiss Lathe</fullName>
            </value>
            <value>
                <fullName>Sheet Metal - Bent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>