unpackaged/main/default/objects/Supplier__c/fields/TestPartRequested__c.field-meta.xml
<CustomField>
    <fullName>TestPartRequested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test Part Requested</label>
    <type>Checkbox</type>
</CustomField>