unpackaged/main/default/objects/Supplier__c/fields/TestPartRequired__c.field-meta.xml
<CustomField>
    <fullName>TestPartRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test Part Required</label>
    <type>Checkbox</type>
</CustomField>