unpackaged/main/default/objects/Supplier__c/fields/TestPartSentDate__c.field-meta.xml
<CustomField>
    <fullName>TestPartSentDate__c</fullName>
    <description>Updates when Send Test Part case is closed</description>
    <label>Test Part Sent Date</label>
    <type>DateTime</type>
</CustomField>