unpackaged/main/default/objects/Supplier__c/fields/TestPartState__c.field-meta.xml
<CustomField>
    <fullName>TestPartState__c</fullName>
    <label>Test Part State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>