unpackaged/main/default/objects/Supplier__c/fields/TestPartStatus__c.field-meta.xml
<CustomField>
    <fullName>TestPartStatus__c</fullName>
    <label>Test Part Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Outstanding</fullName>
            </value>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>EZ-Pass</fullName>
            </value>
            <value>
                <fullName>Preparing To Ship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>