unpackaged/main/default/objects/Supplier__c/fields/TestPartStreetAddress__c.field-meta.xml
<CustomField>
    <fullName>TestPartStreetAddress__c</fullName>
    <label>Test Part Street Address</label>
    <type>TextArea</type>
</CustomField>