unpackaged/main/default/objects/Supplier__c/fields/TestPartZipCode__c.field-meta.xml
<CustomField>
    <fullName>TestPartZipCode__c</fullName>
    <label>Test Part Zip Code</label>
    <length>12</length>
    <type>Text</type>
</CustomField>