unpackaged/main/default/objects/Supplier__c/fields/TestProcessAdditive__c.field-meta.xml
<CustomField>
    <fullName>TestProcessAdditive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test Process Additive</label>
    <type>Checkbox</type>
</CustomField>