unpackaged/main/default/objects/Supplier__c/fields/TestProcessCNCLathe__c.field-meta.xml
<CustomField>
    <fullName>TestProcessCNCLathe__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test Process CNC-Lathe</label>
    <type>Checkbox</type>
</CustomField>