unpackaged/main/default/objects/Supplier__c/fields/TestProcessCNCMill__c.field-meta.xml
<CustomField>
    <fullName>TestProcessCNCMill__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test Process CNC-Mill</label>
    <type>Checkbox</type>
</CustomField>