unpackaged/main/default/objects/Supplier__c/fields/TestProcessInjectionMolding__c.field-meta.xml
<CustomField>
    <fullName>TestProcessInjectionMolding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test Process Injection Molding</label>
    <type>Checkbox</type>
</CustomField>