unpackaged/main/default/objects/Supplier__c/fields/TestProcessSheetMetalBent__c.field-meta.xml
<CustomField>
    <fullName>TestProcessSheetMetalBent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test Process Sheet Metal-Bent</label>
    <type>Checkbox</type>
</CustomField>