unpackaged/main/default/objects/Supplier__c/fields/TestProcessSheetMetalFlat__c.field-meta.xml
<CustomField>
    <fullName>TestProcessSheetMetalFlat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test Process Sheet Metal-Flat</label>
    <type>Checkbox</type>
</CustomField>