unpackaged/main/default/objects/Supplier__c/fields/TestProcessSwissLathe__c.field-meta.xml
<CustomField>
    <fullName>TestProcessSwissLathe__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test Process-Swiss Lathe</label>
    <type>Checkbox</type>
</CustomField>