unpackaged/main/default/objects/Supplier__c/fields/TestProcessUrethaneCasting__c.field-meta.xml
<CustomField>
    <fullName>TestProcessUrethaneCasting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test Process Urethane Casting</label>
    <type>Checkbox</type>
</CustomField>