unpackaged/main/default/objects/Supplier__c/fields/Threaded_Inserts__c.field-meta.xml
<CustomField>
    <fullName>Threaded_Inserts__c</fullName>
    <label>Threaded Inserts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>