unpackaged/main/default/objects/Supplier__c/fields/TimelinessRating__c.field-meta.xml
<CustomField>
    <fullName>TimelinessRating__c</fullName>
    <label>Timeliness Rating</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>