unpackaged/main/default/objects/Supplier__c/fields/Total_of_Escalations__c.field-meta.xml
<CustomField>
    <fullName>Total_of_Escalations__c</fullName>
    <label>Total # of Escalations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>