unpackaged/main/default/objects/Supplier__c/fields/TotalJobPayoutAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalJobPayoutAmount__c</fullName>
    <label>Total Job Payout Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>