unpackaged/main/default/objects/Supplier__c/fields/TotalMachineCount__c.field-meta.xml
<CustomField>
    <fullName>TotalMachineCount__c</fullName>
    <label>Total Machine Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>