unpackaged/main/default/objects/Supplier__c/fields/TotalNumberOfVQCRecords__c.field-meta.xml
<CustomField>
    <fullName>TotalNumberOfVQCRecords__c</fullName>
    <label>Total Number of VQC Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>